Fix navbar is overlapped.

--- a/src/WebClient/Widgets/NavBar.razor.css
+++ b/src/WebClient/Widgets/NavBar.razor.css
@@ -9,6 +9,7 @@
     background-color: var(--btn-bg-color);
     padding: 8px var(--body-left-right-padding);
     justify-content: space-between;
+    z-index: 1;
 }
 
 .logo {
